[tool.poetry]
name = "plz-cmd"
version = "0.9.0"
description = "command line app for running configurable shell commands"
readme = "README.md"
authors = ["Mike Brown <mike.brown@excella.com>"]
license = "MIT"
repository = "https://github.com/m3brown/plz"
packages = [
    {include = "plz", from="."},
]

[tool.poetry.scripts]
plz = "plz.main:main"

[tool.poetry.dependencies]
python = "^2.7 || ^3.5"
colorama = "^0.4"
jsonschema = [
    {version = "^3.2.0", python = "<=3.6"},
    {version = "^4.2.0", python = ">=3.7"}
]
PyYAML = ">=3.0"

[tool.poetry.dev-dependencies]
pre-commit = "^1.21"
pytest = [
    {version = "^4.6.0", python = "^2.7"},
    {version = "^5.3", python = ">=3.5"}
]
pytest-cov = "^2.8"
tox = "^3.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pycln]
all = true
