[tool.poetry]
name = "plz-cmd"
version = "1.0.4"
description = "command line app for running configurable shell commands"
readme = "README.md"
authors = ["Mike Brown <mike.brown@excella.com>"]
license = "MIT"
repository = "https://github.com/m3brown/plz"
packages = [
    {include = "plz", from="."},
]

[tool.poetry.scripts]
plz = "plz.main:main"

[tool.poetry.dependencies]
python = "^3.5"
colorama = "^0.4"
jsonschema = [
    {version = "^3.2.0", python = "<3.7"},
    {version = "^4.2.0", python = ">=3.7"}
]
PyYAML = ">=3.0"

[tool.poetry.dev-dependencies]
pre-commit = [
    {version = "^1.21", python = "<3.6.1"},
    {version = "^2.16.0", python = ">=3.6.1"}
]
pytest = [
    {version = "^5.3.0", python = "<3.6"},
    {version = "^6.2.5", python = ">=3.6"}
]
pytest-cov = [
    {version = "^2.8.0", python = "<3.6"},
    {version = "^3.0.0", python = ">=3.6"}
]

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pycln]
all = true
