[tool.poetry]
name = "plz-cmd"
version = "1.2.2"
description = "command line app for running configurable shell commands"
readme = "README.md"
authors = ["Mike Brown <mike.brown@excella.com>"]
license = "MIT"
repository = "https://github.com/m3brown/plz"
packages = [
    {include = "plz", from="."},
]

[tool.poetry.scripts]
plz = "plz.main:main"

[tool.poetry.dependencies]
python = "^3.6"
colorama = ">=0.4.0"
jsonschema = [
    {version = "^3.2.0", python = "<3.7"},
    {version = ">=4.2.0", python = ">=3.7"}
]
PyYAML = ">=3.0"

[tool.poetry.dev-dependencies]
pre-commit = [
    {version = "^1.21", python = "<3.6.1"},
    {version = "^2.17.0", python = ">=3.6.1"}
]
pytest = [
    {version = ">=6.2.5", python = "<3.7"},
    {version = ">=7.2.0", python = ">=3.7"}
]
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry>=1.1.13"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pycln]
all = true
